--- a/refundPolicies.html
+++ b/refundPolicies.html
@@ -49,6 +49,7 @@
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
                     <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
@@ -63,7 +64,7 @@
             <div class="d-inline-flex mb-lg-5">
                 <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
                 <p class="m-0 text-white px-2">/</p>
-                <p class="m-0 text-white">Politicas De Reembolso</p>
+                <p class="m-0 text-white">Politicas</p>
             </div>
         </div>
     </div>
@@ -97,6 +98,34 @@
         </div>
     </div>
     <!-- Page Content End -->
+	
+	<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-primary">Políticas de Entrega de Likalees</h1>
+            <p>En Likalees, nos esforzamos por brindar un servicio de entrega confiable y eficiente. A continuación, detallamos nuestras políticas de entrega:</p>
+
+            <h2>Proceso de Entrega</h2>
+            <p>Nuestro equipo se compromete a procesar tu pedido rápidamente. Una vez confirmado el pago, tu pedido será preparado para su envío en un plazo máximo de 2 días hábiles.</p>
+
+            <h2>Tiempo de Entrega</h2>
+            <p>El tiempo de entrega estándar es de 3 a 5 días hábiles a partir del día en que se procesa tu pedido. Ten en cuenta que los tiempos de entrega pueden variar dependiendo de la ubicación del destino.</p>
+
+            <h2>Gastos de Envío</h2>
+            <p>Los gastos de envío se calculan al finalizar tu compra y varían según la ubicación de entrega. Ofrecemos opciones de envío estándar y express con tarifas diferenciadas.</p>
+
+            <h2>Seguimiento de Pedidos</h2>
+            <p>Una vez despachado tu pedido, recibirás un número de seguimiento para poder rastrear tu envío. Podrás monitorear el estado de tu entrega en tiempo real.</p>
+
+            <h2>Entrega de Productos</h2>
+            <p>Es importante que alguien esté presente en la dirección de entrega para recibir los productos. En caso de no encontrarse nadie, se dejará una notificación para coordinar una segunda entrega.</p>
+
+            <h2>Atención al Cliente</h2>
+            <p>Si necesitas ayuda con tu pedido o la entrega, nuestro equipo de atención al cliente está disponible para asistirte. Contáctanos mediante nuestro correo electrónico <a href="mailto:likalees@gmail.com">likalees@gmail.com</a> o llámanos al <a href="tel:+51907564917">+51 907564917</a>.</p>
+        </div>
+    </div>
+</div>
+
 
     <!-- Footer Start -->
     <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
@@ -112,8 +141,8 @@
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
 
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-tiktok"></i></a>
+                 <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61552912798444&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.tiktok.com/@energixcaramelo?_t=8gtXomKHgqE&_r=1 "><i class="fab fa-tiktok"></i></a>
 
 
                 </div>
