--- a/inicio.html
+++ b/inicio.html
@@ -49,6 +49,7 @@
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
                     <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                 </div>
@@ -70,10 +71,38 @@
                         <h2 class="text-white m-0">Desde 2023</h2>
                     </div>
                 </div>
+                <!-- Aquí puedes agregar más imágenes del carrusel si lo deseas -->
+                <div class="carousel-item">
+                    <img class="w-100" src="img/carousel-2.jpg" alt="Image 2">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <!-- Contenido para la segunda imagen del carrusel -->
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="w-100" src="img/carousel-3.jpg" alt="Image 3">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <!-- Contenido para la tercera imagen del carrusel -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Controles de navegación y indicadores -->
+            <a class="carousel-control-prev" href="#blog-carousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#blog-carousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Siguiente</span>
+            </a>
+            <ol class="carousel-indicators">
+                <li data-target="#blog-carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#blog-carousel" data-slide-to="1"></li>
+                <li data-target="#blog-carousel" data-slide-to="2"></li>
+            </ol>
         </div>
     </div>
-
-
+    <!-- Carousel End -->
     <!-- Footer Start -->
     <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
         <div class="row mx-0 pt-5 px-sm-3 px-lg-5 mt-4">
@@ -87,9 +116,8 @@
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">SÍGANOS</h4>
                 <p>Acompañanos en las redes sociales y mantente al tanto de nuestras últimas novedades, promociones y eventos especiales.</p>
                 <div class="d-flex justify-content-start">
-
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-tiktok"></i></a>
+<a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.facebook.com/profile.php?id=61552912798444&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="https://www.tiktok.com/@energixcaramelo?_t=8gtXomKHgqE&_r=1 "><i class="fab fa-tiktok"></i></a>
 
 
                 </div>
