--- a/bar.html
+++ b/bar.html
@@ -96,7 +96,7 @@
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
                                 </div>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                             <img class="img-fluid mb-3 mb-sm-0" src="img/barraE2.png" alt="">
                         </div>
                         <div class="col-sm-7">
-                            <h4><i class="fa fa-coffee service-icon"></i>Energix - Bar De Frutas Secas </h4>							
+                            <h4><i class="fa fa-coffee service-icon"></i>Energix - Bar De Frutos Secos </h4>							
 							<p>Experimenta la frescura natural en cada bocado con nuestras deliciosas barras de frutas secas.</p>
 							<p>150 gr.</p>
 							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/7.00</p>
@@ -117,7 +117,7 @@
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
                                 </div>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                             <div class="input-group">
                                 <input type="number" class="form-control" placeholder="Cantidad">
                                 <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
+                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Agregar Carrito</button>
                                 </div>
                             </div>
                         </div>
